--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -53,6 +53,9 @@
         </ul>
       </div>
     </nav>
+
+
+    <!--Home-->
     <div class="container-fluid w-100 d-block px-0" id="home">
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
@@ -82,11 +85,57 @@
 
 
 
+<div class="container-fluid">
+  <!--About us-->
+
+  <div id="about" class="my-5">
+    <div class="row">
+      <div class="col-12 col-md-6  d-inline">
+        <h2 class="mb-3">About us</h2>
+        <div>
+          <img class="img-fluid w-100" src="https://via.placeholder.com/400x300" alt="Photo of my office">
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 px-md-3 pt-md-5">
+        <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system,
+          and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself,
+          because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is
+          there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain
+          can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it?
+          But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant
+          pleasure?"</p>
+      </div>
+    </div>
+
+  </div>
+
+
+
+
+<div id="Portfolio">
+
+</div>
+
+
+
+
+<div id="Contact">
+
+</div>
+
+
+
+
+</div>
+
+
+
       <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-  </body>
+
 </html>
