--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -113,9 +113,58 @@
 
 
 
-<div id="Portfolio">
+  <div id="portfolio" class="my-5">
+    <h2 class="mb-3">Portfolio</h2>
 
-</div>
+    <div class="row">
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 1">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 2">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 3">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 4">
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 1">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 2">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 3">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 4">
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 1">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 2">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 3">
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <img class="img-fluid w-100" src="https://via.placeholder.com/380x200" alt="Port 4">
+      </div>
+
+    </div><hr>
+
+  </div>
 
 
 
@@ -137,5 +186,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-
 </html>
