--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -56,7 +56,7 @@
 
 
     <!--Home-->
-    <div class="container-fluid w-100 d-block px-0" id="home">
+    <div class="container-fluid w-100 d-block px-0 ml-md-3" id="home">
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -88,7 +88,7 @@
 <div class="container-fluid">
   <!--About us-->
 
-  <div id="about" class="my-5">
+  <div id="about" class="my-5 ml-md-4">
     <div class="row">
       <div class="col-12 col-md-6  d-inline">
         <h2 class="mb-3">About us</h2>
@@ -113,7 +113,7 @@
 
 
 
-  <div id="portfolio" class="my-5">
+  <div id="portfolio" class="my-5 ml-md-4">
     <h2 class="mb-3">Portfolio</h2>
 
     <div class="row">
@@ -166,24 +166,125 @@
 
   </div>
 
+  <div id="contact" class="my-5 px-5">
+
+    <h2 class="mb-3">Contact</h2>
+    <div class="row px-4">
+      <div class="col-md-6">
+        <form class="needs-validation " novalidate>
+          <div class="form-row">
+            <div class="col-md-4 mb-3">
+              <label for="validationCustom01">First name</label>
+                <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
+                  <div class="valid-feedback">
+                    Looks good!
+                  </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+              <label for="validationCustom02">Last name</label>
+                <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
+                  <div class="valid-feedback">
+                    Looks good!
+                  </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+              <label for="validationCustomUsername">E-Mail</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroupPrepend">@</span>
+                  </div>
+                  <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
+                  <div class="invalid-feedback">
+                   Enter your e-mail.
+                  </div>
+                </div>
+              </div>
+          </div>
+
+
+        <div class="form-row">
+          <div class="col-md-6 mb-3">
+            <label for="validationCustom03">City</label>
+              <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
+                <div class="invalid-feedback">
+                  Please provide a valid city.
+                </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <label for="validationCustom04">State</label>
+              <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
+                <div class="invalid-feedback">
+                  Please provide a valid state.
+                </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <label for="validationCustom05">Zip</label>
+              <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
+                <div class="invalid-feedback">
+                  Please provide a valid zip.
+                </div>
+          </div>
+        </div>
+
+
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Example textarea</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter your text here..."></textarea>
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                <label class="form-check-label" for="invalidCheck">
+                  Agree to terms and conditions
+                </label>
+            <div class="invalid-feedback">
+                You must agree before submitting.
+            </div>
+          </div>
+      </div>
+            <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+
+  </div>
+      <div class="col-12 col-md-6 ">
+        <div class="ml-md-3">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1398134.5242649068!2d7.1031482651404225!3d46.80959482879546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c64ef6f596d61%3A0x5c56b5110fcb7b15!2sSchweiz!5e0!3m2!1sde!2sch!4v1545310622535" width="700" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+  </div>
+  </div>
+  </div>
+
+  <script>
+  // Example starter JavaScript for disabling form submissions if there are invalid fields
+  (function() {
+    'use strict';
+    window.addEventListener('load', function() {
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      var forms = document.getElementsByClassName('needs-validation');
+      // Loop over them and prevent submission
+      var validation = Array.prototype.filter.call(forms, function(form) {
+        form.addEventListener('submit', function(event) {
+          if (form.checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+          }
+          form.classList.add('was-validated');
+        }, false);
+      });
+    }, false);
+  })();
+  </script>
 
 
 
-<div id="Contact">
-
-</div>
 
 
-
-
-</div>
-
-
-
-      <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+  <!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
 </html>
