--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,7 +13,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100 py-lg-5 fixed-bottom">
-      <a class="navbar-brand" href="#">Portfolio</a>
+      <a class="navbar-brand" href="#home">Portfolio de Rose</a>
       <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,20 +21,20 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-1 w-100 justify-content-end">
           <li class="nav-item mx-md-4">
-            <a class="nav-link" href="#Home">Home</a>
+            <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item mx-md-4">
-            <a class="nav-link" href="#Portfolio">Portfolio</a>
+            <a class="nav-link" href="#about">About us</a>
           </li>
           <li class="nav-item mx-md-4">
-            <a class="nav-link" href="#About us">About us</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item dropup ml-md-4 d-none d-md-block">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Contact
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#ContactForm">Form</a>
+              <a class="dropdown-item" href="#contact">Form</a>
               <a class="dropdown-item" href="http://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
               <a class="dropdown-item" href="http://www.twitter.com"><i class="fab fa-twitter"></i></a>
               <a class="dropdown-item" href="http://www.instagram.com"><i class="fab fa-instagram"></i></a>
@@ -44,7 +45,7 @@
               Contact
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#ContactForm">Contact form</a>
+              <a class="dropdown-item" href="#contact">Contact form</a>
               <a class="dropdown-item" href="http://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
               <a class="dropdown-item" href="http://www.twitter.com"><i class="fab fa-twitter"></i></a>
               <a class="dropdown-item" href="http://www.instagram.com"><i class="fab fa-instagram"></i></a>
@@ -56,7 +57,7 @@
 
 
     <!--Home-->
-    <div class="container-fluid w-100 d-block px-0 ml-md-3" id="home">
+    <div class="container-fluid w-100 d-block px-0 ml-3" id="home">
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -88,16 +89,16 @@
 <div class="container-fluid">
   <!--About us-->
 
-  <div id="about" class="my-5 ml-md-4">
+  <div id="about" class="my-5 ml-4">
     <div class="row">
       <div class="col-12 col-md-6  d-inline">
-        <h2 class="mb-3">About us</h2>
+        <h2 class="mb-3 pb-md-4 pt-md-4">About us</h2>
         <div>
           <img class="img-fluid w-100" src="https://via.placeholder.com/400x300" alt="Photo of my office">
         </div>
       </div>
 
-      <div class="col-12 col-md-6 px-md-3 pt-md-5">
+      <div class="col-12 col-md-6 px-md-3 mt-md-5 pt-md-5">
         <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system,
           and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself,
           because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is
@@ -106,15 +107,15 @@
           But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant
           pleasure?"</p>
       </div>
-    </div>
+    </div><hr>
 
   </div>
 
 
 
 
-  <div id="portfolio" class="my-5 ml-md-4">
-    <h2 class="mb-3">Portfolio</h2>
+  <div id="portfolio" class="my-5 ml-4">
+    <h2 class="mb-3 pt-md-4 pb-md-4">Portfolio</h2>
 
     <div class="row">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
@@ -168,10 +169,10 @@
 
   <div id="contact" class="my-5 px-5">
 
-    <h2 class="mb-3">Contact</h2>
+    <h2 class="mb-4 pb-md-4 mt-md-4">Contact</h2>
     <div class="row px-4">
       <div class="col-md-6">
-        <form class="needs-validation " novalidate>
+        <form class="needs-validation pb-4 " novalidate>
           <div class="form-row">
             <div class="col-md-4 mb-3">
               <label for="validationCustom01">First name</label>
@@ -230,7 +231,7 @@
 
 
           <div class="form-group">
-            <label for="exampleFormControlTextarea1">Example textarea</label>
+            <label for="exampleFormControlTextarea1">Message</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter your text here..."></textarea>
           </div>
           <div class="form-group">
@@ -249,8 +250,8 @@
 
   </div>
       <div class="col-12 col-md-6 ">
-        <div class="ml-md-3">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1398134.5242649068!2d7.1031482651404225!3d46.80959482879546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c64ef6f596d61%3A0x5c56b5110fcb7b15!2sSchweiz!5e0!3m2!1sde!2sch!4v1545310622535" width="700" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class=" ml-md-3">
+  <iframe class="img-fluid w-100 " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1398134.5242649068!2d7.1031482651404225!3d46.80959482879546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c64ef6f596d61%3A0x5c56b5110fcb7b15!2sSchweiz!5e0!3m2!1sde!2sch!4v1545310622535" width="700" height="700" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
   </div>
   </div>
@@ -287,4 +288,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+
 </html>
